# TddPractice

./: .gitignore  CMakeLists.txt  ccpp.yml  readme.md
.github/workflows/: ccpp.yml
src/: Bowling.cpp  Bowling.h  CMakeLists.txt
test/: BowlingTest.cpp  CMakeLists.txt  main.cpp
